--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pandas==1.3.4
-numpy==1.19.5
-sendgrid==6.8.0
-pyspark==3.2.0
+sendgrid==6.9.7
+pyspark==3.3.2
+requests==2.28.2
+numpy==1.24.2
+pandas==1.5.3
